# JVips

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  INPUTSTREAM_API_FINDINGS.md  MEMORY_LEAK_ANALYSIS.md  MIGRATING.md  README.md  Toolchain-linux-aarch64-sve2.cmake  Toolchain-linux-aarch64.cmake  Toolchain-linux-x86_64.cmake  Toolchain-linux.cmake  Toolchain-macOS.cmake  build-multiarch.sh  build.sh  pom.xml  setup-for-macos.sh
.github/docker/linux/: Dockerfile
.github/docker/linux-aarch64/: Dockerfile
.github/docker/linux-arm64/: Dockerfile
.github/workflows/: build.yml
lib/: CMakeLists.txt  VERSIONS
script/enum-generator/: EnumGenerator.py
script/enum-generator/template/: Enum.java
src/main/c/: CMakeLists.txt  VipsContext.c  VipsContext.h  VipsImage.c
src/main/java/com/criteo/vips/: CMakeLists.txt  Image.java  Vips.java  VipsContext.java  VipsImage.java
src/main/java/com/criteo/vips/enums/: VipsAccess.java  VipsAlign.java  VipsAngle.java  VipsAngle45.java  VipsArgumentFlags.java  VipsBandFormat.java  VipsBlendMode.java  VipsCoding.java  VipsCombine.java  VipsCombineMode.java  VipsDemandStyle.java  VipsDirection.java  VipsExtend.java  VipsFailOn.java  VipsForeignCoding.java  VipsForeignDzContainer.java  VipsForeignDzDepth.java  VipsForeignDzLayout.java  VipsForeignFlags.java  VipsForeignHeifCompression.java  VipsForeignHeifEncoder.java  VipsForeignJpegSubsample.java  (+33 more)
src/test/c/: CMakeLists.txt  VipsEnumTest.c
src/test/java/com/criteo/vips/: CMakeLists.txt  VipsContextTest.java  VipsImageTest.java  VipsMemoryLeakTest.java  VipsTestUtils.java
(+3 files in other folders)
